[tool.poetry]
name = "vst-api"
version = "0.1.0"
description = ""
authors = ["rochacbruno"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
sqlmodel = "^0.0.14"
typer = "^0.9.0"
dynaconf = "^3.2.4"
jinja2 = "^3.1.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.7"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.0"
urllib3 = "^2.2.0"
elasticsearch = "^8.12.0"
openpyxl = "^3.1.2"
pyarrow = "^15.0.0"
jdatetime = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vst_api = 'vst_api.__main__:main'
